# hugo-python-distributions

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  HUGO_CHECKSUM  LICENSE  MANIFEST.in  README.md  SECURITY.md  en.search-data.json  en.search.min.c0563db63a6b7c9f18ab9a9290e19e69bde5843576573b63a63ddd07f111d4e0.js  en.search.min.d5102a6b58791e5aa8b948920e3f7333fd100a942cbae3a7cb2650c6753d4d08.js  index.html  index.xml  meson.build  meson.options  noxfile.py  pyproject.toml  setup.cfg  setup.py  sitemap.xml  zizmor.yml
.github/: dependabot.yml  release.yml  update-hugo.md
.github/workflows/: cd.yml  ci.yml  docker.yml  docs.yml  reproducer.yml  update-hugo.yml
building-from-sources/: index.html
categories/: index.html  index.xml
css/compiled/: main.min.5a06ca26e024c4f511f45ee6c33a2a1faefaebe6be8a38d36e100f40a4c59c06.css
docs/: conf.py  go.mod  go.sum  hugo.yaml  index.md
docs/content/: _index.md  building-from-sources.md  supported-platforms.md
hugo/: __init__.py  cli.py
js/: main.min.fba3ec135d44d7f6157536de8b6b5ad85fca935d4a8ca668f566b59df20cfa04.js
licenses/: LICENSE-hugo.txt
meson_cross_files/: linux-arm64.ini  windows-386.ini  windows-arm64.ini
python_hugo/: __init__.py  cli.py
release_notes/: patch.md  pkg-patch.md  stable.md
scripts/: _hugo_meson_python_wrapper.py  build_hugo.py  generate_meson_cross_file.py  hugo_meson_python_wrapper.py  piwheels_go_toolchain.py  prune_sdist.py
scripts/ci/tools/linux/: install_go.sh  install_zig.sh  repair_wheels.py
scripts/ci/tools/macos/: fuse_wheels.py
scripts/ci/tools/patches/: 0001-use-temporary-directory-to-store-eggs.patch
src/hugo/: _version.py.in  cli.py
src/hugo_python_distributions/: __init__.py
supported-platforms/: index.html
tags/: index.html  index.xml
