[build-system]
requires = [
  "setuptools>=64",
  "wheel==0.43.0",
  # "ziglang>=0.11.0"
  ]
build-backend = "setuptools.build_meta"

# ------ Project metadata ---------------------------------------------------------

[project]
name = "hugo"
authors = [
  { name = "Agriya Khetarpal", email = "agriyakhetarpal@outlook.com" },
]
maintainers = [
  { name = "Agriya Khetarpal", email = "agriyakhetarpal@outlook.com" },
]
description = "Binaries for the Hugo static site generator, installable with pip"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dynamic = ["scripts", "version"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Go",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/agriyakhetarpal/hugo-python-distributions"
Issues = "https://github.com/agriyakhetarpal/hugo-python-distributions/issues"
Changelog = "https://github.com/agriyakhetarpal/hugo-python-distributions/releases"

# ------ Configure the setuptools build system ------------------------------------

[tool.setuptools.packages.find]
include = ["hugo", "hugo.*"]

# ------ Configure the Ruff linter and auto-formatter -----------------------------

[tool.ruff]
src = ["hugo"]
lint.extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
lint.ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["T20"]

# ------ Set up a development environment with Pixi -------------------------------

[tool.pixi.project]
channels = ["conda-forge"]
platforms = [
  "linux-64",
  "linux-aarch64",
  "linux-ppc64le",
  "osx-64",
  "osx-arm64",
  "win-64",
]

[tool.pixi.dependencies]
go = "1.22.2"
compilers = ">=1.7.0,<1.8"
git = ">=2.45.0,<2.46"
pre-commit = ">=3.7.0,<3.8"

[tool.pixi.pypi-dependencies]
hugo = { path = ".", editable = true }

[tool.pixi.tasks]
lint = "pre-commit run --all-files"
"hugo version" = "hugo version"
"hugo env" = "hugo env --logLevel info"
