[build-system]
requires = [
  "setuptools>=77.0.3",
  # linux s390x and windows arm64 wheels are not yet available
  # skipping a marker for windows arm64 as nested markers are
  # not supported in PEP 508 AFAIU
  "ziglang==0.14.0; platform_machine != 's390x'",
]
build-backend = "setuptools.build_meta"

[project]
name = "hugo"
authors = [
  { name = "Agriya Khetarpal", email = "agriyakhetarpal@outlook.com" },
]
maintainers = [
  { name = "Agriya Khetarpal", email = "agriyakhetarpal@outlook.com" },
]
description = "Binaries for the 'extended + withdeploy' edition of the Hugo static site generator, installable with pip"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "LICENSE-hugo.txt"]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Go",
  "Programming Language :: Zig",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/agriyakhetarpal/hugo-python-distributions"
Issues = "https://github.com/agriyakhetarpal/hugo-python-distributions/issues"
Changelog = "https://github.com/agriyakhetarpal/hugo-python-distributions/releases"

[tool.setuptools.packages.find]
include = ["hugo", "hugo.*"]

[project.scripts]
hugo = "hugo.cli:__call"

[tool.ruff]
src = ["hugo"]
lint.extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
lint.ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "PLC0415",  # Import should be at the top-level of a file
]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["T20"]
