[build-system]
requires = ["meson-python==0.19.0"]
build-backend = "hugo_meson_python_wrapper"
backend-path = ["scripts"]

[project]
name = "hugo"
authors = [
  { name = "Agriya Khetarpal", email = "agriyakhetarpal@outlook.com" },
]
maintainers = [
  { name = "Agriya Khetarpal", email = "agriyakhetarpal@outlook.com" },
]
description = "Binaries for the 'extended + withdeploy' edition of the Hugo static site generator, installable with pip"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "LICENSE-hugo.txt"]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
  "Development Status :: 6 - Mature",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: Unix",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Go",
  "Programming Language :: Zig",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Text Processing :: Markup :: reStructuredText",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/agriyakhetarpal/hugo-python-distributions"
Issues = "https://github.com/agriyakhetarpal/hugo-python-distributions/issues"
Changelog = "https://github.com/agriyakhetarpal/hugo-python-distributions/releases"

[project.scripts]
hugo = "hugo.cli:__call"

[tool.meson-python]
allow-windows-internal-shared-libs = true

[tool.cibuildwheel]
# CI overrides CIBW_BUILD to also exercise the build on other interpreters
# but since we are shipping a none-any wheel this doesn't matter for local
# builds as we don't want to build multiple wheels
build = "cp314-*"
skip = "*musllinux*"
test-command = """
hugo version
hugo env --logLevel debug
"""
# arm64 wheels are cross-compiled from the x86_64 runner and cannot run there
test-skip = "*-win_arm64"

[tool.cibuildwheel.windows]
# auto would also build 32-bit x86 on a 64-bit runner. That target is
# cross-compiled in its own job, so let's keep native Windows builds as AMD64 only.
archs = ["AMD64"]

# cross-compile the Windows arm64 wheel with the matching Meson cross file
[[tool.cibuildwheel.overrides]]
select = "*-win_arm64"
config-settings = { setup-args = "--cross-file={project}/meson_cross_files/windows-arm64.ini" }

# cross-compile the Windows 32-bit (x86) wheel with the matching Meson cross file
[[tool.cibuildwheel.overrides]]
select = "*-win32"
config-settings = { setup-args = "--cross-file={project}/meson_cross_files/windows-386.ini" }

[tool.ruff]
src = ["src"]
lint.extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
lint.ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "PLC0415",  # Import should be at the top-level of a file
]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["T20"]
